Upgrade to Java 21 and Update of Many Libraries